--- a/index.html
+++ b/index.html
@@ -1,20 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boolando</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <header>
-
-    </header>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header></header>
     <main>
-
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+                <figure>
+                    <img class="figure" src="./img/1.webp" alt="">
+                </figure>
+                <caption>
+                    Levi's <br>
+                    RELAXED FIT TEE UNISEX <br>
+                    <span>14.99€ </span><span> 29.99€</span>
+                </caption>
+            </div>
+            <div class="col">
+                <figure>
+                    <img class="figure" src="./img/2.webp" alt="">
+                </figure>
+                <caption>
+                    Levi's <br>
+                    RELAXED FIT TEE UNISEX <br>
+                    <span>14.99€ </span><span> 29.99€</span>
+                </caption></div>
+            <div class="col">
+                <figure>
+                    <img class="figure" src="./img/3.webp" alt="">
+                </figure>
+                <caption>
+                    Levi's <br>
+                    RELAXED FIT TEE UNISEX <br>
+                    <span>14.99€ </span><span> 29.99€</span>
+                </caption></div>
+            <div class="col">
+                <figure>
+                    <img class="figure" src="./img/4.webp" alt="">
+                </figure>
+                <caption>
+                    Levi's <br>
+                    RELAXED FIT TEE UNISEX <br>
+                    <span>14.99€ </span><span> 29.99€</span>
+                </caption></div>
+            <div class="col">
+                <figure>
+                    <img class="figure" src="./img/5.webp" alt="">
+                </figure>
+                <caption>
+                    Levi's <br>
+                    RELAXED FIT TEE UNISEX <br>
+                    <span>14.99€ </span><span> 29.99€</span>
+                </caption></div>
+            <div class="col">
+                <figure>
+                    <img class="figure" src="./img/6.webp" alt="">
+                </figure>
+                <caption>
+                    Levi's <br>
+                    RELAXED FIT TEE UNISEX <br>
+                    <span>14.99€ </span><span> 29.99€</span>
+                </caption></div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
