ADD icone, e prima struttura main

--- a/index.html
+++ b/index.html
@@ -7,66 +7,94 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+        <nav class="container nav">
+            <div class="row-nav">
+                <ul class="category">
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Bambini</a></li>
+                </ul>
+                <img class="Logo" src="./img/boolean-logo.png" alt="Logo">
+                <div class="mini-tab">
+                    <a href="#"><img class="icon" src="./img/icons8-customer-48.png" alt="icona"></a>
+                    <a href="#"><img class="icon" src="./img/icons8-heart-32.png" alt="icona"></a>
+                    <a href="#"><img class="icon" src="./img/icons8-shopping-bag-50.png" alt="icona"></a>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
       <section>
         <div class="container">
           <div class="row">
+
             <div class="col">
                 <figure>
                     <img class="figure" src="./img/1.webp" alt="">
                 </figure>
                 <caption>
-                    Levi's <br>
-                    RELAXED FIT TEE UNISEX <br>
-                    <span>14.99€ </span><span> 29.99€</span>
+                   <span> Levi's <br>
+                    <strong>RELAXED FIT TEE UNISEX</strong> <br>
+                    <span>14.99 € </span><span> 29.99 €</span>
                 </caption>
             </div>
+
             <div class="col">
                 <figure>
                     <img class="figure" src="./img/2.webp" alt="">
                 </figure>
                 <caption>
                     Levi's <br>
-                    RELAXED FIT TEE UNISEX <br>
-                    <span>14.99€ </span><span> 29.99€</span>
-                </caption></div>
+                    <strong>ROSES TEE</strong> <br>
+                    <span>14.99 € </span><span> 29.99 €</span>
+                </caption>
+            </div>
+
             <div class="col">
                 <figure>
                     <img class="figure" src="./img/3.webp" alt="">
                 </figure>
                 <caption>
-                    Levi's <br>
-                    RELAXED FIT TEE UNISEX <br>
-                    <span>14.99€ </span><span> 29.99€</span>
-                </caption></div>
+                    Levi's<br>
+                    <strong>VOGLIA DI COLORI PASTELLO</strong> <br>
+                    <span>14.99 € </span><span> 29.99 €</span>
+                </caption>
+            </div>
+
             <div class="col">
                 <figure>
                     <img class="figure" src="./img/4.webp" alt="">
                 </figure>
                 <caption>
-                    Levi's <br>
-                    RELAXED FIT TEE UNISEX <br>
-                    <span>14.99€ </span><span> 29.99€</span>
-                </caption></div>
+                    Levi's<br>
+                    <strong>TEE UNISEX</strong> <br>
+                    <span>14.99 € </span><span> 29.99 €</span>
+                </caption>
+            </div>
+
             <div class="col">
                 <figure>
                     <img class="figure" src="./img/5.webp" alt="">
                 </figure>
                 <caption>
                     Levi's <br>
-                    RELAXED FIT TEE UNISEX <br>
-                    <span>14.99€ </span><span> 29.99€</span>
-                </caption></div>
+                    <strong>STRIPE BODICE</strong> <br>
+                    <span>14.99 € </span><span> 29.99 €</span>
+                </caption>
+            </div>
+
             <div class="col">
                 <figure>
                     <img class="figure" src="./img/6.webp" alt="">
                 </figure>
                 <caption>
                     Levi's <br>
-                    RELAXED FIT TEE UNISEX <br>
-                    <span>14.99€ </span><span> 29.99€</span>
-                </caption></div>
+                    <strong>MAGLIONE BLACK</strong> <br>
+                    <span>14.99 € </span><span> 29.99 €</span>
+                </caption>
+            </div>
+            
           </div>
         </div>
       </section>
