ADD position tags

--- a/index.html
+++ b/index.html
@@ -31,74 +31,89 @@
 
             <div class="col">
                 <figure>
-                    <img class="figure" src="./img/1.webp" alt="">
+                    <a href="#"><div class="prefe">&#128420;</div></a>
+                    <span class="big-sale"> 50% </span>
+                    <span class="ambiente">Sostenibilità</span>
+                    <img class="figure" src="./img/1.webp" alt="img 1">
                 </figure>
                 <caption>
                    <span> Levi's <br>
-                    <strong>RELAXED FIT TEE UNISEX</strong> <br>
-                    <span>14.99 € </span><span> 29.99 €</span>
+                    <a href="#"><strong>RELAXED FIT TEE UNISEX</strong></a> <br>
+                    <span class="sale">14.99 € </span><span class="full-price"> 29.99 €</span>
                 </caption>
             </div>
 
             <div class="col">
                 <figure>
-                    <img class="figure" src="./img/2.webp" alt="">
+                    <span class="big-sale"> 30% </span>
+                    <a href="#"><div class="prefe">&#128420;</div></a>
+                    <img class="figure" src="./img/2.webp" alt="img 2">
                 </figure>
                 <caption>
-                    Levi's <br>
-                    <strong>ROSES TEE</strong> <br>
-                    <span>14.99 € </span><span> 29.99 €</span>
+                    GUESS <br>
+                    <a href="#"><strong>ROSES TEE</strong></a> <br>
+                    <span class="sale">20.99 € </span><span class="full-price"> 29.99 €</span>
                 </caption>
             </div>
 
             <div class="col">
                 <figure>
-                    <img class="figure" src="./img/3.webp" alt="">
+                    <span class="big-sale"> 30% </span>
+                    <a href="#"><div class="prefe">&#128420;</div></a>
+                    <img class="figure" src="./img/3.webp" alt="img 3">
+                </figure>
+                <caption>
+                    Come Zucchero Filato<br>
+                    <a href="#"><strong>VOGLIA DI COLORI PASTELLO</strong></a> <br>
+                    <span class="sale">129.99 € </span><span class="full-price"> 184.99 €</span>
+                </caption>
+            </div>
+
+            <div class="col">
+                <figure>
+                    <span class="big-sale"> 50% </span>
+                    <span class="ambiente">Sostenibilità</span>
+                    <a href="#"><div class="prefe">&#128420;</div></a>
+                    <img class="figure" src="./img/4.webp" alt="img 4">
                 </figure>
                 <caption>
                     Levi's<br>
-                    <strong>VOGLIA DI COLORI PASTELLO</strong> <br>
-                    <span>14.99 € </span><span> 29.99 €</span>
+                    <a href="#"><strong>TEE UNISEX</strong></a> <br>
+                    <span class="sale">14.99 € </span><span class="full-price"> 29.99 €</span>
                 </caption>
             </div>
 
             <div class="col">
                 <figure>
-                    <img class="figure" src="./img/4.webp" alt="">
+                    <a href="#"><div class="prefe">&#128420;</div></a>
+                    <img class="figure" src="./img/5.webp" alt="img 5">
                 </figure>
                 <caption>
-                    Levi's<br>
-                    <strong>TEE UNISEX</strong> <br>
-                    <span>14.99 € </span><span> 29.99 €</span>
+                    Maya Deluxe<br>
+                    <a href="#"><strong>STRIPE BODICE</strong></a> <br>
+                    <span class="sale">99.99 € </span>
                 </caption>
             </div>
 
             <div class="col">
                 <figure>
-                    <img class="figure" src="./img/5.webp" alt="">
+                    <span class="only ambiente">Sostenibilità</span>
+                    <a href="#"><div class="prefe">&#128420;</div></a>
+                    <img class="figure" src="./img/6.webp" alt="img 6">
                 </figure>
                 <caption>
-                    Levi's <br>
-                    <strong>STRIPE BODICE</strong> <br>
-                    <span>14.99 € </span><span> 29.99 €</span>
+                    Esprit<br>
+                    <a href="#"><strong>MAGLIONE BLACK</strong></a> <br>
+                    <span class="sale"> 29.99 €</span>
                 </caption>
             </div>
 
-            <div class="col">
-                <figure>
-                    <img class="figure" src="./img/6.webp" alt="">
-                </figure>
-                <caption>
-                    Levi's <br>
-                    <strong>MAGLIONE BLACK</strong> <br>
-                    <span>14.99 € </span><span> 29.99 €</span>
-                </caption>
-            </div>
-            
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
   </body>
 </html>
