--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <img class="figure" src="./img/1.webp" alt="img 1">
                 </figure>
                 <caption>
-                   <span> Levi's <br>
-                    <a href="#"><strong>RELAXED FIT TEE UNISEX</strong></a> <br>
+                   <h4>Levi's</h4>
+                    <a href="#"><h3>RELAXED FIT TEE UNISEX</h3></a>
                     <span class="sale">14.99 € </span><span class="full-price"> 29.99 €</span>
                 </caption>
             </div>
@@ -50,8 +50,8 @@
                     <img class="figure" src="./img/2.webp" alt="img 2">
                 </figure>
                 <caption>
-                    GUESS <br>
-                    <a href="#"><strong>ROSES TEE</strong></a> <br>
+                    <h4>GUESS</h4>
+                    <a href="#"><h3>ROSES TEE</h3></a>
                     <span class="sale">20.99 € </span><span class="full-price"> 29.99 €</span>
                 </caption>
             </div>
@@ -63,8 +63,8 @@
                     <img class="figure" src="./img/3.webp" alt="img 3">
                 </figure>
                 <caption>
-                    Come Zucchero Filato<br>
-                    <a href="#"><strong>VOGLIA DI COLORI PASTELLO</strong></a> <br>
+                    <h4>Come Zucchero Filato</h4>
+                    <a href="#"><h3>VOGLIA DI COLORI PASTELLO</h3></a>
                     <span class="sale">129.99 € </span><span class="full-price"> 184.99 €</span>
                 </caption>
             </div>
@@ -77,8 +77,8 @@
                     <img class="figure" src="./img/4.webp" alt="img 4">
                 </figure>
                 <caption>
-                    Levi's<br>
-                    <a href="#"><strong>TEE UNISEX</strong></a> <br>
+                    <h4>Levi's</h4>
+                    <a href="#"><h3>TEE UNISEX</h3></a>
                     <span class="sale">14.99 € </span><span class="full-price"> 29.99 €</span>
                 </caption>
             </div>
@@ -89,8 +89,8 @@
                     <img class="figure" src="./img/5.webp" alt="img 5">
                 </figure>
                 <caption>
-                    Maya Deluxe<br>
-                    <a href="#"><strong>STRIPE BODICE</strong></a> <br>
+                    <h4>Maya Deluxe</h4>
+                    <a href="#"><h3>STRIPE BODICE</h3></a>
                     <span class="sale">99.99 € </span>
                 </caption>
             </div>
@@ -102,8 +102,8 @@
                     <img class="figure" src="./img/6.webp" alt="img 6">
                 </figure>
                 <caption>
-                    Esprit<br>
-                    <a href="#"><strong>MAGLIONE BLACK</strong></a> <br>
+                    <h4>Esprit</h4>
+                    <a href="#"><h3>MAGLIONE BLACK</h3></a>
                     <span class="sale"> 29.99 €</span>
                 </caption>
             </div>
@@ -113,7 +113,28 @@
       </section>
     </main>
     <footer>
-        
+        <div class="container-foot">
+            <div class="row-foot">
+                <div class="container foot">
+                    <div class="white">Boolando s.r.l.</div>
+                    <ul class="category foot">
+                        <li><a href="#">Informazioni legali</a></li>
+                        <li><a href="#">Informativa sulla privacy</a></li>
+                        <li><a href="#">Diritto di recesso</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="mini-tab">
+                        <div class="white">Trovaci anche su</div>
+                        <a href="#"><img class="icon" src="./img/icons8-customer-48.png" alt="icona"></a>
+                        <a href="#"><img class="icon" src="./img/icons8-heart-32.png" alt="icona"></a>
+                        <a href="#"><img class="icon" src="./img/icons8-shopping-bag-50.png" alt="icona"></a>
+                        <a href="#"><img class="icon" src="./img/icons8-shopping-bag-50.png" alt="icona"></a>
+                        <a href="#"><img class="icon" src="./img/icons8-shopping-bag-50.png" alt="icona"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
   </body>
 </html>
